# simple-bevy-wasm-ball-game

./: Cargo.toml  README.md  app.js  audio_context_patch.js  index.html  simple-bevy-wasm-ball-game.d.ts  simple-bevy-wasm-ball-game.js  simple-bevy-wasm-ball-game_bg.wasm.d.ts  styles.css  wasm_bindgen_core.js
assets/models/: scene.glb
blend/models/: scene.blend
src/: events.rs  main.rs  systems.rs
src/enemy/: mod.rs  systems.rs
src/game/: mod.rs  systems.rs  utils.rs
src/game/actor/: mod.rs
src/game/audio/: mod.rs  resources.rs  systems.rs
src/game/enemy/: components.rs  enemy_ball.rs  mod.rs  resources.rs  systems.rs
src/game/models/: mod.rs  resources.rs
src/game/physics/: components.rs  mod.rs  systems.rs
src/game/player/: components.rs  mod.rs  player_ball.rs  systems.rs
src/game/player/systems/: interactions.rs  lifecycles.rs  mod.rs  movement.rs
src/game/score/: mod.rs  systems.rs
src/game/star/: collectable_star.rs  components.rs  mod.rs  resources.rs  systems.rs
src/game/ui/: mod.rs
src/game/ui/game_over_menu/: mod.rs  styles.rs
src/game/ui/hud/: mod.rs  styles.rs
src/game/ui/hud/systems/: layout.rs  (+1 more)
src/game/ui/pause_menu/: mod.rs  styles.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/player/: mod.rs  systems.rs
src/score/: mod.rs  resources.rs  systems.rs
src/star/: mod.rs  systems.rs
src/window_camera/: components.rs  mod.rs  systems.rs
utils/wasm/: app.js  build.sh  index.html  optimize.sh  patch.js  styles.css
wasm/: build.sh  console_to_dom.js  index.html
(+5 files in other folders)
