[package]
name = "simple-bevy-wasm-ball-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier2d = { version = "0.21.0", features = ["debug-render-2d"] }
# wasm-bindgen  simd-stable
fastrand = "2.0.0"

# [profile.dev.package.bevy_rapier3d]
# opt-level = 3
# [profile.dev.package."*"]
# opt-level = 3