[package]
name = "simple-bevy-wasm-ball-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_rapier3d = "0.22.0"
fastrand = "2.0.0"
bevy_ui_styled = { git = "https://github.com/volodalexey/bevy_ui_styled" }

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
